--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 #itemList > div{
 	display: grid;
-	grid-template-columns: auto auto auto auto;
+	grid-template-columns: auto auto auto auto auto;
 
-}
+
