--- a/style.css
+++ b/style.css
@@ -4,17 +4,24 @@ body {
 
 #itemList > div{
 	display: grid;
-	grid-template-columns: 20% auto 10% 15% 10%;
-	text-align: center;
+	grid-template-columns: 30% auto 10% 15% 15%;
 	align-items: center;
 	margin-top: 5px;
 }
 
+#itemList {
+	padding: 1rem;
+}
+
 #itemList button{
 	padding: 0;
+	font-size: 2rem;
 }
 
 .header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	padding: 30px;
 	text-align: center;
 	background: #ffb3a7;
@@ -33,13 +40,40 @@ body {
 	margin-top: 50px;
 }
 
-#num{
-	width: 15px;
-	-moz-appearance: textfield;
-}
 
 .chart {
 	position: relative;
+}
+
+#form{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
+#form input {
+	height: 2rem;
+}
+
+.selection{
+	min-width: 300px;
+}
+
+.hours{
+	-moz-appearance: textfield;
+	width: 60px;
+}
+
+.date{
+	max-width: 200px;
+}
+
+.add{
+	font-size: 1.5rem;
+}
+
+.input{
+	margin: 5px;
 }
 
 @media only screen and (max-width: 800px) {
@@ -47,35 +81,13 @@ body {
 		display: flex;
 		flex-direction: column;
 	}
-}
 
-.selection{
-	font-size: 20px;
-	min-width: 300px;
-}
+	#form{
+		flex-direction: column;
+		align-items: center;
+	}
 
-.hours{
-	font-size: 20px;
-	max-width: 60px;
-	min-width: 60px;
-}
-
-.date{
-	font-size: 20px;
-	max-width: 200px;
-}
-
-.add{
-	font-size: 20px;
-	background-color: rgb(255,105,180);
-	border-color: violet;
-	box-shadow: black;
-}
-
-.error {
-	font-size: 20px;
-}
-
-.history {
-	font-size: 20px;
+	.input{
+		margin-bottom: 10px;
+	}
 }
